[workspace]
members = ["accounts-db", "blockchain", "clap-utils", "cli-config", "gossip", "keygen", "ledger", "net-utils", "rpc", "streamer", "validator"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/blockchain-v2"
homepage = "https://github.com/volodymyrd/blockchain-v2"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.99"
bincode = "1.3.3"
clap = { version = "4.5.41", features = ["cargo"] }
fs_extra = "1.3.0"
log = "0.4.27"
nix = "0.30.1"
prost = "0.14.1"
rand = "0.9.2"
rpassword = "7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
socket2 = "0.6.0"

# solana-sdk
solana-accounts-db = "2.3.7"
solana-clock = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-genesis-config = "3.0.0"
solana-keypair = "3.0.0"
solana-hash = "3.0.0"
solana-logger = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-serde-varint = "3.0.0"
solana-time-utils = "3.0.0"

thiserror = "2.0.14"
tiny-bip39 = "2.0.0"
url = "2.5.4"

# internal dependencies
blockchain-accounts-db = { path = "accounts-db" }
blockchain-clap-utils = { path = "clap-utils" }
blockchain-cli-config = { path = "cli-config" }
blockchain-core = { path = "blockchain" }
blockchain-gossip = { path = "gossip" }
blockchain-ledger = { path = "ledger" }
blockchain-net-utils = { path = "net-utils" }
blockchain-streamer = { path = "streamer" }
