[workspace]
members = ["accounts-db", "blockchain", "clap-utils", "cli-config", "entry",
    "genesis", "gossip", "keygen", "ledger", "measure", "merkle-tree", "net-utils",
    "rpc", "streamer", "validator"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/blockchain-v2"
homepage = "https://github.com/volodymyrd/blockchain-v2"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.99"
assert_matches = "1.5.0"
bincode = "1.3.3"
bitflags = "2.9.3"
bzip2 = "0.6.0"
crossbeam-channel = "0.5.15"
clap = { version = "4.5.41", features = ["cargo"] }
dirs-next = "2.0.0"
fast-math = "0.1.1"
fs_extra = "1.3.0"
hex = "0.4.3"
log = "0.4.27"
lru = "0.8.1"
nix = "0.30.1"
num_enum = "0.7.4"
num_cpus = "1.17.0"
prost = "0.14.1"
rand = "0.9.2"
rpassword = "7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_yaml_ng = "0.10.0"
socket2 = "0.6.0"

# solana-sdk
solana-account = "3.0.0"
solana-clock = "3.0.0"
solana-cluster-type = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-fee-calculator = "3.0.0"
solana-genesis-config = "3.0.0"
solana-inflation = "3.0.0"
solana-keypair = "3.0.0"
solana-hash = "3.0.0"
solana-logger = "3.0.0"
solana-native-token = "3.0.0"
solana-poh-config = "3.0.0"
solana-pubkey = "3.0.0"
solana-rent = "3.0.0"
solana-signature = "3.0.0"
solana-signer = "3.0.0"
solana-serde-varint = "3.0.0"
solana-sha256-hasher = "3.0.0"
solana-stake-interface = "2.0.1"
solana-time-utils = "3.0.0"
solana-transaction = "3.0.0"
solana-vote-interface = "3.0.0"

tar = "0.4"
tempfile = "3.21.0"
thiserror = "2.0.14"
tiny-bip39 = "2.0.0"
url = "2.5.4"

# internal dependencies
blockchain-accounts-db = { path = "accounts-db" }
blockchain-clap-utils = { path = "clap-utils" }
blockchain-cli-config = { path = "cli-config" }
blockchain-core = { path = "blockchain" }
blockchain-entry = { path = "entry" }
blockchain-gossip = { path = "gossip" }
blockchain-ledger = { path = "ledger" }
blockchain-measure = { path = "measure" }
blockchain-merkle-tree = { path = "merkle-tree" }
blockchain-net-utils = { path = "net-utils" }
