[workspace]
members = [
    "account-decoder",
    "account-decoder-client-types",
    "accounts-db",
    "blockchain",
    "clap-utils",
    "cli-config",
    "entry",
    "feature-set",
    "genesis",
    "gossip",
    "keygen",
    "ledger",
    "measure",
    "merkle-tree",
    "net-utils",
    "perf",
    "programs/stake",
    "programs/vote",
    "rayon-threadlimit",
    "reserved-account-keys",
    "rpc",
    "runtime",
    "storage-proto",
    "streamer",
    "svm-feature-set",
    "transaction-context",
    "transaction-status",
    "transaction-status-client-types",
    "validator",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/blockchain-v2"
homepage = "https://github.com/volodymyrd/blockchain-v2"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
Inflector = "0.11.4"
ahash = "0.8.12"
anyhow = "1.0.99"
assert_matches = "1.5.0"
base64 = "0.22.1"
bencher = "0.1.5"
bincode = "1.3.3"
bitflags = "2.9.3"
blockchain-account-decoder = { path = "account-decoder" }
blockchain-account-decoder-client-types = { path = "account-decoder-client-types" }
blockchain-accounts-db = { path = "accounts-db" }
blockchain-clap-utils = { path = "clap-utils" }
blockchain-cli-config = { path = "cli-config" }
blockchain-core = { path = "blockchain" }
blockchain-entry = { path = "entry" }
blockchain-feature-set = { path = "feature-set" }
blockchain-gossip = { path = "gossip" }
blockchain-ledger = { path = "ledger" }
blockchain-measure = { path = "measure" }
blockchain-merkle-tree = { path = "merkle-tree" }
blockchain-net-utils = { path = "net-utils" }
blockchain-perf = { path = "perf" }
blockchain-rayon-threadlimit = { path = "rayon-threadlimit" }
blockchain-reserved-account-keys = { path = "reserved-account-keys" }
blockchain-runtime = { path = "runtime" }
blockchain-stake-program = { path = "programs/stake" }
blockchain-streamer = { path = "streamer" }
blockchain-svm-feature-set = { path = "svm-feature-set" }
blockchain-transaction-context = { path = "transaction-context" }
blockchain-transaction-status = { path = "transaction-status" }
blockchain-transaction-status-client-types = { path = "transaction-status-client-types" }
blockchain-vote-program = { path = "programs/vote" }
borsh = { version = "1.5.7", features = ["derive", "unstable__schema"] }
bs58 = "0.5.1"
bv = "0.11.1"
bytemuck = "1.23.2"
bytemuck_derive = "1.10.1"
bytes = "1.10.1"
bzip2 = "0.6.0"
caps = "0.5.5"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["cargo"] }
crossbeam-channel = "0.5.15"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
enum-iterator = "2.1.0"
fast-math = "0.1.1"
fnv = "1.0.7"
fs_extra = "1.3.0"
hex = "0.4.3"
histogram = "0.11.3"
itertools = "0.14.0"
lazy-lru = "0.1.4"
libc = "0.2.175"
log = "0.4.27"
lru = "0.8.1"
nix = "0.30.1"
num_cpus = "1.17.0"
num_enum = "0.7.4"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qualifier_attr = { version = "0.2.2", default-features = false }
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.3.1"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.11.0"
reed-solomon-erasure = "6.0.0"
rpassword = "7.4"
serde = "1.0.219" # must match the serde_derive version
serde_bytes = "0.11.17"
serde_derive = "1.0.219" # must match the serde version
serde_json = "1.0.143"
serde_yaml_ng = "0.10.0"
socket2 = "0.6.0"

# solana-sdk
solana-account = "3.0.0"
solana-account-info = "3.0.0"
solana-address-lookup-table-interface = "3.0.0"
solana-clock = "3.0.0"
solana-cluster-type = "3.0.0"
solana-commitment-config = "3.0.0"
solana-config-interface = "2.0.0"
solana-epoch-schedule = "3.0.0"
solana-feature-gate-interface = "3.0.0"
solana-fee-calculator = "3.0.0"
solana-frozen-abi = "3.0.0"
solana-frozen-abi-macro = "3.0.0"
solana-genesis-config = "3.0.0"
solana-hash = "3.0.0"
solana-inflation = "3.0.0"
solana-instruction = "3.0.0"
solana-instruction-error = "2.0.0"
solana-instructions-sysvar = "3.0.0"
solana-keypair = "3.0.1"
solana-loader-v2-interface = "3.0.0"
solana-loader-v3-interface = "6.1.0"
solana-logger = "3.0.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-nonce = "3.0.0"
solana-nonce-account = "3.0.0"
solana-packet = "3.0.0"
solana-poh-config = "3.0.0"
solana-program-entrypoint = "3.1.0"
solana-program-option = "3.0.0"
solana-program-pack = "3.0.0"
solana-pubkey = "3.0.0"
solana-rent = "3.0.0"
solana-reward-info = "3.0.0"
solana-sbpf = { version = "=0.12.2", default-features = false }
solana-sdk-ids = "3.0.0"
solana-serde = "3.0.0"
solana-serde-varint = "3.0.0"
solana-sha256-hasher = "3.0.0"
solana-short-vec = "3.0.0"
solana-shred-version = "3.0.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-slot-hashes = "3.0.0"
solana-slot-history = "3.0.0"
solana-stake-interface = "2.0.1"
solana-system-interface = "2.0.0"
solana-system-transaction = "3.0.0"
solana-sysvar = "3.0.0"
solana-time-utils = "3.0.0"
solana-transaction = "3.0.1"
solana-transaction-error = "3.0.0"
solana-vote = "3.0.1"
solana-vote-interface = "3.0.0"
solana-vote-program = "3.0.1"

spl-associated-token-account-interface = "2.0.0"
spl-generic-token = "2.0.0"
spl-memo-interface = "2.0.0"
spl-pod = "0.7.0"
spl-token-2022-interface = "2.0.0"
spl-token-confidential-transfer-proof-extraction = "0.5.0"
spl-token-group-interface = "0.7.0"
spl-token-interface = "2.0.0"
spl-token-metadata-interface = "0.8.0"
static_assertions = "1.1.0"
tar = "0.4"
tempfile = "3.21.0"
test-case = "3.3.1"
thiserror = "2.0.14"
tiny-bip39 = "2.0.0"
tonic = "0.9.2"
tonic-build = "0.9.2"
url = "2.5.4"
zstd = "0.13.3"
