[package]
name = "blockchain-accounts-db"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
solana-accounts-db = { workspace = true }
solana-genesis-config = { workspace = true, features = ["serde"] }
