[package]
name = "blockchain-accounts-db"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bzip2 = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
solana-genesis-config = { workspace = true, features = ["serde"] }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
rand = "0.8.5"

[dev-dependencies]
assert_matches = { workspace = true }
solana-logger = { workspace = true }
