[package]
name = "blockchain-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
blockchain-accounts-db = { workspace = true }
blockchain-gossip = { workspace = true }
blockchain-ledger = { workspace = true }
log = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-genesis-config = { workspace = true }
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
thiserror = { workspace = true }
