[package]
name = "blockchain-genesis"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blockchain-accounts-db = { workspace = true }
blockchain-cli-config = { workspace = true }
blockchain-clap-utils = { workspace = true }
blockchain-entry = { workspace = true }
blockchain-ledger = { workspace = true }
clap = { workspace = true }
solana-clock = { workspace = true }
solana-cluster-type = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-inflation = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-genesis-config = { workspace = true }
solana-logger = { workspace = true }
solana-native-token = { workspace = true }
solana-poh-config = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-stake-interface = { workspace = true }
solana-vote-interface = { workspace = true }
