[package]
name = "blockchain-net-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
agave-unstable-api = []
default = []
dev-context-only-utils = ["dep:pcap-file", "dep:hxdmp"]


[dependencies]
hxdmp = { version = "0.2.1", optional = true }
log = { workspace = true }
nix = { workspace = true, features = ["socket"] }
pcap-file = { version = "2.0.0", optional = true }
rand = { workspace = true }
socket2 = { workspace = true }
url = { workspace = true }
