[package]
name = "blockchain-runtime"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blockchain-feature-set = { workspace = true }
solana-account = { workspace = true }
solana-feature-gate-interface = { workspace = true, features = ["bincode"] }
solana-genesis-config = { workspace = true }
solana-pubkey = { workspace = true }
