[package]
name = "blockchain-storage-proto"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
blockchain-account-decoder = { workspace = true }
blockchain-transaction-context = { workspace = true, features = ["serde"] }
bs58 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-serde = { workspace = true }
solana-signature = { workspace = true, features = ["std"] }
solana-transaction = { workspace = true }
solana-transaction-error = { workspace = true }
blockchain-transaction-status = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

# windows users should install the protobuf compiler manually and set the PROTOC
# envar to point to the installed binary
[target."cfg(not(windows))".build-dependencies]
protobuf-src = { workspace = true }

[dev-dependencies]
enum-iterator = { workspace = true }
test-case = { workspace = true }
