[package]
name = "blockchain-transaction-context"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
bincode = ["dep:bincode", "serde", "solana-account/bincode"]
dev-context-only-utils = ["bincode", "solana-account/dev-context-only-utils", "dep:qualifier_attr"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
qualifier_attr = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-instructions-sysvar = { workspace = true }
solana-pubkey = { workspace = true }
solana-sbpf = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
bincode = { workspace = true, optional = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true, optional = true }

[dev-dependencies]
solana-account-info = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-system-interface = { workspace = true }
blockchain-transaction-context = { path = ".", features = [
    "dev-context-only-utils",
] }
static_assertions = { workspace = true }
