[package]
name = "blockchain-transaction-status-client-types"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blockchain-account-decoder-client-types = { workspace = true }
blockchain-transaction-context = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-reward-info = { workspace = true, features = ["serde"] }
solana-signature = { workspace = true, default-features = false }
solana-transaction = { workspace = true, features = ["serde"] }
solana-transaction-error = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
