[package]
name = "blockchain-vote-program"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-vote-interface = { workspace = true, features = ["bincode"] }
